fixed the spacing of the main and thankyou pages

--- a/css/style.css
+++ b/css/style.css
@@ -29,11 +29,20 @@ table {
 .wrapper {
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
+    justify-content: space-around;
     align-content: center;
     text-align: center;
     width: 500px;
     margin: 0 auto;
+    padding: 100px 0 30px;
+}
+
+.inner-wrapper {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    height: 100%;
+    max-height: 75%;
 }
 .logo {
     display: flex;
